--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div id="root">
-     
+     <h1>Not rendered</h1>
   </div>
   
   <script  type="module" src="App.js"></script>
